changes to preprocessor

--- a/preprocessor.ipynb
+++ b/preprocessor.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v7/5tsbqqss7b73ynyghzvs47mw0000gn/T/ipykernel_24970/2924896692.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import json\n",
@@ -14,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,26 +356,20 @@
     "\n",
     "x['director_name'] = x['crew'].apply(get_director)   \n",
     "\n",
-    "# Get first named genre, assume it's the \"dominant\" genre of this movie\n",
     "x['dominant_genre'] = x['genres'].apply(lambda x:x[0] if len(x)>0 else 'none')  \n",
     "\n",
-    "# Add just the year of the release. Fill with 0 if no year is given\n",
     "x['title_year'] = pd.to_datetime(x['release_date']).apply(lambda x:0 if pd.isnull(x.year) else int(x.year))\n",
     "\n",
-    "# Week of the year movie was released - proxy for seasonality\n",
     "x['release_week'] = pd.to_datetime(x['release_date']).apply(lambda x:0 if pd.isnull(x.week) else int(x.week))\n",
     "\n",
-    "# Overall size of production\n",
     "x['cast_size'] = x['cast'].apply(lambda x:len(x) if len(x)>0 else 0)\n",
     "x['crew_size'] = x['crew'].apply(lambda x:len(x) if len(x)>0 else 0)\n",
     "x['number_production_companies'] = x['production_companies'].apply(lambda x:len(x) if len(x)>0 else 0)\n",
     "\n",
-    "# Number of crew members by key role\n",
     "x['director_count'] = x['crew'].apply(get_crew_member_count_by_job, args=('Director',))   \n",
     "x['writer_count'] = x['crew'].apply(get_crew_member_count_by_job, args=('Screenplay',))   \n",
     "x['editor_count'] = x['crew'].apply(get_crew_member_count_by_job, args=('Editor',))  \n",
     "\n",
-    "# Size of various departments\n",
     "x['sound_department_size'] = x['crew'].apply(get_department_size, args=('Sound',))   \n",
     "x['costume_department_size'] = x['crew'].apply(get_department_size, args=('Costume & Make-Up',)) \n",
     "x['editing_department_size'] = x['crew'].apply(get_department_size, args=('Editing',)) \n",
@@ -369,9 +378,8 @@
     "x['camera_department_size'] = x['crew'].apply(get_department_size, args=('Camera',)) \n",
     "x['vx_department_size'] = x['crew'].apply(get_department_size, args=('Visual Effects',)) \n",
     "\n",
-    "# Gender breakdown\n",
-    "x['stated_male_cast_count'] = x['cast'].apply(get_cast_number, args = ('2'))\n",
-    "x['stated_female_cast_count'] = x['cast'].apply(get_cast_number, args = ('1'))\n",
+    "x['male_cast_count'] = x['cast'].apply(get_cast_number, args = ('2'))\n",
+    "x['female_cast_count'] = x['cast'].apply(get_cast_number, args = ('1'))\n",
     "x['unstated_gender_cast_count'] = x['cast'].apply(get_cast_number, args = ('0'))\n",
     "\n",
     "# x['genres'] = x['genres'].fillna(None)\n",
@@ -419,7 +427,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def one_hot_encoder(df, column_to_encode, control_df, control_subset_size, control_column, output_prefix):\n",
+    "    control_list = set(control_df.nlargest(control_subset_size, control_column)[control_column])\n",
+    "    \n",
+    "    def encode_item(item):\n",
+    "        if isinstance(item, list):\n",
+    "            encoded = {output_prefix + elem.replace(\" \", \"\"): 1 for elem in item if elem in control_list}\n",
+    "        else:\n",
+    "            encoded = {output_prefix + item.replace(\" \", \"\"): 1 if item in control_list else 0}\n",
+    "        return encoded\n",
+    "    \n",
+    "    encoded_data = df[column_to_encode].apply(lambda x: encode_item(x) if pd.notna(x) else {})\n",
+    "    \n",
+    "    encoded_df = pd.DataFrame(list(encoded_data)).fillna(0).astype(int)\n",
+    "    \n",
+    "    df = df.drop(column_to_encode, axis=1).reset_index(drop=True)\n",
+    "    df = pd.concat([df, encoded_df], axis=1)\n",
+    "    \n",
+    "    return df\n"
+   ]
   }
  ],
  "metadata": {
