changed to normalization instead of standardization

--- a/dnn.ipynb
+++ b/dnn.ipynb
@@ -2,28 +2,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "97rG3nXaq-w6"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\Tom Gjonaj\\AppData\\Local\\Temp\\ipykernel_7872\\3167043685.py:1: DeprecationWarning: \n",
-            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-            "but was not found to be installed on your system.\n",
-            "If this would cause problems for you,\n",
-            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-            "        \n",
-            "  import pandas as pd\n",
-            "c:\\Users\\Tom Gjonaj\\Desktop\\Projects\\box-officer\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import json\n",
@@ -47,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -219,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "rx1yE-3-q-w9"
       },
@@ -240,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "nh2JyzLtq-w-"
       },
@@ -297,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "KUw2kwX6q-w-"
       },
@@ -356,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "FT-ScIvsq-w-"
       },
@@ -384,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "id": "GcAtexm4q-w_"
       },
@@ -441,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "id": "u4soSteXq-w_"
       },
@@ -453,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "id": "IVt_mpzJq-w_"
       },
@@ -471,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "id": "OcTS0M1Rq-w_"
       },
@@ -482,138 +465,6 @@
         "\n",
         "descriptions = taglines + \" \" + overview\n",
         "descriptions = descriptions.map(lambda x: x.strip() if isinstance(x, str) else x)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000,
-          "referenced_widgets": [
-            "ff089ee5c88b4e6aad9ad7f4985c21b3",
-            "f575789dc7484d12b294e5d7dea11d8f",
-            "7811bfc4af844ecfb9d66434acbde95d",
-            "d11f603b1ed5477b8a7332e37acb550a",
-            "d0f2cf58e9204415a74fbb4e78742ed8",
-            "2b85c0b82a92472da1059abdb45645c2",
-            "696d1dc4d28040459a5485c7f154b466",
-            "2c4fe175d2de42cda9ea0b37a5769d82",
-            "0e5a32ba0ee34c4384f205988c613c3b",
-            "906784672c4f4b538c3557b94a52393a",
-            "84f68af7f2dc47a1b9a922b4fc59de26",
-            "cb0b6a72373a41169a77f5067a568e75",
-            "a94460c30f70432aa27b1ac6d3f79163",
-            "1a719825bf5c40d8be3b0616fa62d5f0",
-            "3f303f474cfd4cbfbbec0852a55cd4cb",
-            "33132c926bcb41199ad5bfaac8fd855f",
-            "af5c59064203443bbb399a922c55e9c5",
-            "4a54f433f8fe40a28dfcaf91649f4ecd",
-            "d5a9b7c2914740d2b5f9423f9af12746",
-            "a1cde74bcd9b4bfe9c679a9db68130c7",
-            "8d72400890ee44c4ac301d6c7e0e1192",
-            "2474311eab3a451a9f030d3705b4affa",
-            "c569233982ea473aa7666f598ac36886",
-            "ee6d3765380e4c6eba1e2c2daa446763",
-            "79b1abfe8d9b443eb0664ac8b0152cb0",
-            "4c61675f908d4620b1806f84e7fb8c60",
-            "55111e979ba44138ab4f14bdab850dd0",
-            "f942281d80bf4b13b6197caaba7b5c61",
-            "2b6e9dda7ffe4439b19c49f9ab3a56c2",
-            "67c6dfbe4d4c4023b6ccf05992a1322f",
-            "55541798674f4c65b55f927b144da308",
-            "63ccd5ab16b74056a70b70e5bfac9b14",
-            "218d5525720a4bee8e05ea3ba84bd762",
-            "4a9b877264554963ba58de1bdcbb42b9",
-            "ae9ac289271c47edb735c64d09908e70",
-            "68df3ec163ce4e83b478cbc01bdc9628",
-            "1568c832059e498997a827c545d232e7",
-            "901c57a885614e2198988d2b53031058",
-            "0faf5222f3d04595882a2a90e0c547ad",
-            "f2dd4db6522c43c1b0848b71c311358d",
-            "c6c0d7c4fd4b479aacb7c4d98a10eb7c",
-            "509c8bacb82047b68d4825c490953934",
-            "5d5146c27ba04154b072196c7ded7834",
-            "3e7238117f0f4d6e9d23c52f40bc16da",
-            "0449dfd0f743439187cce2d50bf2c234",
-            "8b860dfd1a824d1c888adaebf5c913fd",
-            "6f3b6ae3fc2c4ac49f0b53d29b621499",
-            "e8f3617496294d69815bdeea87f4b078",
-            "455eed3a0cc54cdd915526707345ae2a",
-            "251367b02f9d4c36b2c4ca0e4988b169",
-            "148ffc030a26400cba5e78b833d8ea70",
-            "d4b6167a6dea4040b36eb4622b04d17b",
-            "31d33a369cc741a3b44618cedecfab00",
-            "fdf8c19889844e65ba3f5f8641a7efed",
-            "74af510ac601496ab732c26e4a3f76a4"
-          ]
-        },
-        "id": "L8hSWOL3q-xA",
-        "outputId": "7e32e60e-34c7-41e3-c2ac-88d899c7f67d"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "cuda\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 301/301 [00:13<00:00, 21.57it/s]\n"
-          ]
-        }
-      ],
-      "source": [
-        "from transformers import DistilBertTokenizer, DistilBertModel\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import torch\n",
-        "\n",
-        "# Initialize tokenizer and model\n",
-        "tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
-        "model = DistilBertModel.from_pretrained(\"distilbert-base-uncased\")\n",
-        "\n",
-        "model.eval()  # Set the model to evaluation mode\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(device)\n",
-        "model.to(device)\n",
-        "\n",
-        "def generate_embeddings(descriptions, batch_size=16):\n",
-        "    # Container for our embeddings\n",
-        "    all_embeddings = []\n",
-        "\n",
-        "    for i in tqdm(range(0, len(descriptions), batch_size)):\n",
-        "        # Batch descriptions\n",
-        "        batch = descriptions[i:i+batch_size]\n",
-        "\n",
-        "        # Tokenize and encode the batch\n",
-        "        inputs = tokenizer(batch, return_tensors='pt', max_length=512, truncation=True, padding='max_length', add_special_tokens=True)\n",
-        "\n",
-        "        # Move tensors to the configured device\n",
-        "        input_ids = inputs['input_ids'].to(device)\n",
-        "        attention_mask = inputs['attention_mask'].to(device)\n",
-        "\n",
-        "        with torch.no_grad():\n",
-        "            outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
-        "            # Use the output of the [CLS] token (first token) as the embedding\n",
-        "            embeddings = outputs.last_hidden_state[:, 0, :].cpu().numpy()\n",
-        "            all_embeddings.extend(embeddings)\n",
-        "\n",
-        "    return np.array(all_embeddings)\n",
-        "\n",
-        "# Assuming `descriptions` is a list or a Pandas Series containing your text data\n",
-        "embeddings = generate_embeddings(list(descriptions))\n",
-        "\n",
-        "embeddings_df = pd.DataFrame(embeddings, columns=[f\"bert_feature_{i}\" for i in range(embeddings.shape[1])])\n",
-        "\n",
-        "# Concatenate the embeddings DataFrame with the original x_cleaned DataFrame\n",
-        "# Ensure that the indexes align if x_cleaned has a specific index\n",
-        "x_cleaned = pd.concat([x_cleaned.reset_index(drop=True), embeddings_df], axis=1)"
       ]
     },
     {
@@ -829,10 +680,11 @@
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.metrics import mean_squared_error\n",
-        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
-        "scaler_X = StandardScaler()\n",
-        "scaler_y = StandardScaler()\n",
+        "scaler_X = MinMaxScaler()\n",
+        "scaler_y = MinMaxScaler()\n",
+        "\n",
         "X_train_scaled = scaler_X.fit_transform(X_train.to_numpy())\n",
         "X_test_scaled = scaler_X.transform(X_test.to_numpy())\n",
         "Y_train_scaled = scaler_y.fit_transform(Y_train.to_numpy().reshape(-1, 1)).flatten()\n",
@@ -965,7 +817,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.9.6"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
