--- a/dnn.ipynb
+++ b/dnn.ipynb
@@ -469,6 +469,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import DistilBertTokenizer, DistilBertModel\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import torch\n",
+        "\n",
+        "tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
+        "model = DistilBertModel.from_pretrained(\"distilbert-base-uncased\")\n",
+        "\n",
+        "model.eval()\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "print(device)\n",
+        "model.to(device)\n",
+        "\n",
+        "def generate_embeddings(descriptions, batch_size=16):\n",
+        "    all_embeddings = []\n",
+        "\n",
+        "    for i in tqdm(range(0, len(descriptions), batch_size)):\n",
+        "        batch = descriptions[i:i+batch_size]\n",
+        "\n",
+        "        inputs = tokenizer(batch, return_tensors='pt', max_length=512, truncation=True, padding='max_length', add_special_tokens=True)\n",
+        "\n",
+        "        input_ids = inputs['input_ids'].to(device)\n",
+        "        attention_mask = inputs['attention_mask'].to(device)\n",
+        "\n",
+        "        with torch.no_grad():\n",
+        "            outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "            embeddings = outputs.last_hidden_state[:, 0, :].cpu().numpy()\n",
+        "            all_embeddings.extend(embeddings)\n",
+        "\n",
+        "    return np.array(all_embeddings)\n",
+        "\n",
+        "embeddings = generate_embeddings(list(descriptions))\n",
+        "\n",
+        "embeddings_df = pd.DataFrame(embeddings, columns=[f\"bert_feature_{i}\" for i in range(embeddings.shape[1])])\n",
+        "\n",
+        "x_cleaned = pd.concat([x_cleaned.reset_index(drop=True), embeddings_df], axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 14,
       "metadata": {
         "id": "rK8YJWEoq-xA"
